# mini-chess

./: .gitignore  LICENSE  README.md  pyproject.toml
src/minichess/: __init__.py  config.py  engine.py  game.py  main.py  setup_assets.py  tray.py
src/minichess/ui/: __init__.py  board_widget.py  board_window.py  styles.py
